--- a/css/interface.css
+++ b/css/interface.css
@@ -14,11 +14,17 @@ li{
     height: 500px;
     background-color: lightslategrey;
     font-family:'微软雅黑';
+
 }
 #header{
     width:100%;
     height: 40px;
-    border-bottom:1px solid black;
+
+}
+.headerbar{
+    width: 200px;
+    margin:0 auto;
+    border:1px solid #666;
 }
 #content{
     position:relative;
@@ -33,15 +39,27 @@ li{
 .reduce{
     width:30px;
     height: 40px;
-    margin-left: 5px;
+
     line-height: 40px;
+}
+.reduce img{
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+    margin-top:10px;
 }
 .style{
     position: absolute;
-    top:5px;
+    top:10px;
     right:10px;
-    width: 30px;
-    height:40px;
+    width: 25px;
+    height:25px;
+
+}
+.style img{
+    width: 25px;
+    height: 25px;
+    border-radius:50%;
 }
 .musiceinfo{
     position:absolute;
@@ -59,16 +77,21 @@ li{
 }
 .contro-cnt{
     position: absolute;
-    height: 60px;
+    width:300px;
     margin-top:20px;
+}
+.contro-cnt:after{
+    display: block;
+    content: '';
+    clear: both;
 }
 .progress{
     height: 20px;
 }
-.contro-cnt li {
+.contro-cnt li{
     float: left;
-    margin-left: 20px;
-    line-height: 60px;
+    width: 100px;
+    text-align: center;;
 }
 .songcover{
     width:170px;
@@ -194,4 +217,28 @@ li{
 }
 .pause{
     display: none;
+}
+.play img,.pause img{
+    width: 50px;
+    height: 50px;
+    color: #000;
+}
+.play,.pause{
+    margin:0 auto;
+}
+.pre img,.next img{
+    width: 36px;
+    height: 36px;
+    margin-top:7px;
+}
+.pre img{
+    margin-left:30px;
+}
+.next img{
+    margin-left:-30px;
+}
+.vol img,.mute img{
+    width: 35px;
+    height: px;
+    
 }
