--- a/css/interface.css
+++ b/css/interface.css
@@ -12,7 +12,8 @@ li{
     margin-left:200px;
     width: 300px;
     height: 500px;
-    background-color: lightslategrey;
+    /*background: linear-gradient(90deg,lightsteelblue, rgb(118,119,120));*/
+    background: rgb(128,128,126);
     font-family:'微软雅黑';
 
 }
@@ -29,11 +30,44 @@ li{
 #content{
     position:relative;
     width: 100%;
-    height: 380px;
+    height: 350px;
+
+}
+.animat{
+    animation: revole 12s infinite linear;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+}
+.edge{
+    width:228px;
+    height:228px;
+    border-radius:50%;
+    background: rgb(106,98,98);
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    transition:0.5s;
+}
+.wordsong{
+    width: 230px;
+    height: 255px;
+
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    display: none;
+    overflow: auto;
+    font-size:14px;
+    text-align: center;
 }
 #contro{
-    position: relative;
+    /*position: relative;*/
     width: 100%;
+    height: 110px;
 
 }
 .reduce{
@@ -94,8 +128,8 @@ li{
     text-align: center;;
 }
 .songcover{
-    width:170px;
-    height: 170px;
+    width:150px;
+    height: 150px;
     position: absolute;
     top:50%;
     left:50%;
@@ -104,13 +138,23 @@ li{
 
 }
 .songcover img{
-    width:170px;
-    height: 170px;
+    width:150px;
+    height: 150px;
     border-radius:50%;
 }
-.icon-play:before{
-    width:41.16px;
+.rubber{
+    width: 220px;
+    height: 220px;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    border-radius:50%;
+    background: linear-gradient(45deg,#000, rgb(128,128,126));
+
+
 }
+
 .stylecnt{
     width:100px;
     height:360px;
@@ -150,34 +194,6 @@ li{
 }
 .mute{
     display:none;
-}
-.delta{
-    position: absolute;
-    border-width:6px;
-    border-style:solid;
-    border-color: transparent rgb(233, 251, 228) transparent transparent;
-    width:10px;
-    height: 10px;
-    bottom:50%;
-    left:-12px;
-    transform:translate(0%,50%)
-}
-.delta2{
-    position: absolute;
-    border-width:6px;
-    border-style:solid;
-    border-color: transparent rgb(233, 251, 228) transparent transparent;
-    width:10px;
-    height: 10px;
-    bottom:50%;
-    left:-11px;
-    transform:translate(0%,50%)
-}
-.volume{
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%)
 }
 .befortime{
     position: absolute;
@@ -232,13 +248,52 @@ li{
     margin-top:7px;
 }
 .pre img{
-    margin-left:30px;
+    margin-left:45px;
 }
 .next img{
-    margin-left:-30px;
+    margin-left:-45px;
 }
-.vol img,.mute img{
-    width: 35px;
-    height: px;
-    
+.vol{
+    margin-bottom:10px;
+    position: relative;
+}
+.volme {
+    width: 15px;
+    margin-left: 30px;
+}
+.volslip{
+    width:100px;
+    border:1px solid #ffffff;
+    height:1px;
+    position:absolute;
+    top:50%;
+    transform:translate(0%,-50%);
+    margin-left:50px;
+    transition:0.5s;
+
+}
+.volslider{
+    position: absolute;
+    top:50%;
+    transform:translate(0,-50%);
+    width: 10px;
+    height: 10px;
+    left:50px;
+    background: #ffffff;
+    border-radius:50%;
+}
+.skin{
+    position: absolute;
+    top:50%;
+    right:30px;
+    transform:translate(0,-50%);
+}
+.skin img{
+    width: 15px;
+}
+@keyframes revole{
+    0%{transform: rotate(0deg);
+        }
+    100%{transform: rotate(360deg);
+        }
 }
